--- a/src/main/resources/static/static/masterCardPurchaseDetails.html
+++ b/src/main/resources/static/static/masterCardPurchaseDetails.html
@@ -14,7 +14,7 @@
         $(function(){
             $('#masterCardPurchaseDetailsDg').datagrid({
                 columns:[[
-                    {field:'id',title:'ID',width:50},
+                    {field:'id',title:'ID',width:50,checkbox:true},
                     {field:'openCardCompanyName',title:'开卡公司',width:50},
                     {field:'masterCardNum',title:'主卡卡号',width:50},
                     {field:'transferTime',title:'转账时间',width:50},
@@ -37,21 +37,73 @@
                 rownumbers:true,
                 fitColumns:true,
                 singleSelect:true,
+                pageSize:10,
                 queryParams: {
                     openCardCompanyName: ''
                 }
 
             });
             $('#AddWin').window('close');
+            $('#EditWin').window('close');
 
         });
 
         function Edit(id) {
-           alert(id);
+            $('#EditWin').window('open');
+            //请求方式   get查询  post增加  put修改   delete删除
+            $.ajax({
+                type:"GET",
+                //请求路径
+                url:"/masterCardPurchaseDetails/find",
+                //或false 是否异步
+                async:true,
+                data:{"id":id},
+                //超时时间
+                timeout:5000,
+                //返回的数据格式：json/xml/html/script/jsonp/text
+                dataType:'json',
+                success:function(data,textStatus,jqXHR){
+                    $('#EditForm').form('load',{
+                        id:data.id,
+                        openCardCompanyName:data.openCardCompanyName,
+                        masterCardNum:data.masterCardNum,
+                        transferTime:data.transferTime,
+                        accountingTime:data.accountingTime,
+                        rechargeAmount:data.rechargeAmount,
+                        transferAmount:data.transferTime,
+                        discount:data.discount,
+                        remarks:data.remarks
+                    });
+
+
+                },
+                error:function(error){
+                    $.messager.alert('提示','查询单条记录失败','info');
+                }
+            })
         }
 
         function Delete(id) {
-           alert(id);
+            //请求方式   get查询  post增加  put修改   delete删除
+            $.ajax({
+                type:"GET",
+                //请求路径
+                url:"/masterCardPurchaseDetails/delete",
+                //或false 是否异步
+                async:true,
+                data:{"id":id},
+                //超时时间
+                timeout:5000,
+                //返回的数据格式：json/xml/html/script/jsonp/text
+                dataType:'text',
+                success:function(data,textStatus,jqXHR){
+                    $.messager.alert('提示','删除成功','info');
+                    $('#masterCardPurchaseDetailsDg').datagrid('reload');
+                },
+                error:function(error){
+                    $.messager.alert('提示','删除失败','info');
+                }
+            })
         }
 
         function Search() {
@@ -65,7 +117,7 @@
             $('#AddWin').window('open');
         }
 
-        function Submit() {
+        function addSubmit() {
             // 显示进度条
             $.messager.progress();
             $('#AddForm').form('submit', {
@@ -92,9 +144,41 @@
 
         }
 
-        function Cancel() {
+        function editSubmit() {
+            // 显示进度条
+            $.messager.progress();
+            $('#EditForm').form('submit', {
+                url: '/masterCardPurchaseDetails/update',
+                onSubmit: function(){
+                    var isValid = $(this).form('validate');
+                    if (!isValid){
+                        // 如果表单是无效的则隐藏进度条
+                        $.messager.progress('close');
+                        $.messager.alert('提示','请填写必填项');
+                    }
+                    // 返回false终止表单提交
+                    return isValid;
+                },
+                success: function(data){
+                    // 如果提交成功则隐藏进度条
+                    $.messager.progress('close');
+                    $.messager.alert('提示','修改成功','info');
+                    $('#EditForm').form('clear')
+                    $('#EditWin').window('close');
+                    $('#masterCardPurchaseDetailsDg').datagrid('reload');
+                }
+            });
+
+        }
+
+        function addCancel() {
             $('#AddForm').form('clear')
             $('#AddWin').window('close');
+        }
+
+        function editCancel() {
+            $('#EditForm').form('clear')
+            $('#EditWin').window('close');
         }
     </script>
 </head>
@@ -123,7 +207,7 @@
     </table>
 
 
-    <div id="AddWin" class="easyui-window" title="编辑主卡进货明细" style="width: 50%; height: auto" data-options="closed:false,collapsible:false,minimizable:false,maximizable:false">
+    <div id="AddWin" class="easyui-window" title="新增主卡进货明细" style="width: 50%; height: auto" data-options="closed:false,collapsible:false,minimizable:false,maximizable:false">
             <form id="AddForm" method="post">
                 <table>
                     <tr>
@@ -169,11 +253,70 @@
                 </table>
 
                 <div>
-                    <a class="easyui-linkbutton" data-options="iconCls:'icon-cancel'" style="float:right" onclick="Cancel()">取消</a>
-                    <a class="easyui-linkbutton" data-options="iconCls:'icon-ok'"  style="float:right" onclick="Submit()">确定</a>
+                    <a class="easyui-linkbutton" data-options="iconCls:'icon-cancel'" style="float:right" onclick="addCancel()">取消</a>
+                    <a class="easyui-linkbutton" data-options="iconCls:'icon-ok'"  style="float:right" onclick="addSubmit()">确定</a>
                 </div>
             </form>
     </div>
+
+
+
+
+    <div id="EditWin" class="easyui-window" title="编辑主卡进货明细" style="width: 50%; height: auto" data-options="closed:false,collapsible:false,minimizable:false,maximizable:false">
+        <form id="EditForm" method="post">
+            <input type="hidden" name="id" data-options="required:true"/>
+            <table>
+                <tr>
+                    <td>开卡公司:</td>
+                    <td>
+                        <input class="easyui-textbox" type="text" name="openCardCompanyName" data-options="required:true"/>
+                    </td>
+                    <td>主卡卡号:</td>
+                    <td>
+                        <input class="easyui-textbox" name="masterCardNum" data-options="required:true"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>转账时间:</td>
+                    <td>
+                        <input class="easyui-datetimebox" name="transferTime" data-options="required:true"/>
+                    </td>
+                    <td>上账时间:</td>
+                    <td>
+                        <input class="easyui-datetimebox" name="accountingTime" data-options="required:true"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>充值面额:</td>
+                    <td>
+                        <input class="easyui-numberbox" name="rechargeAmount" data-options="required:true,min:0,precision:2"/>
+                    </td>
+                    <td>转账金额:</td>
+                    <td>
+                        <input class="easyui-numberbox" name="transferAmount" data-options="required:true,min:0,precision:2"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>折扣:</td>
+                    <td>
+                        <input class="easyui-numberbox" name="discount" data-options="required:true,max:100"/>
+                    </td>
+                    <td>备注:</td>
+                    <td>
+                        <textarea class="easyui-textbox" name="remarks" ></textarea>
+                    </td>
+                </tr>
+            </table>
+
+            <div>
+                <a class="easyui-linkbutton" data-options="iconCls:'icon-cancel'" style="float:right" onclick="editCancel()">取消</a>
+                <a class="easyui-linkbutton" data-options="iconCls:'icon-ok'"  style="float:right" onclick="editSubmit()">确定</a>
+            </div>
+        </form>
+    </div>
+
+
+
 </div>
 </body>
 </html>
