--- a/src/main/resources/static/masterCardOpenBillDetails.html
+++ b/src/main/resources/static/masterCardOpenBillDetails.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>主卡进货明细</title>
+    <title>主卡开票明细</title>
 
     <link rel="stylesheet" type="text/css" href="themes/bootstrap/easyui.css"></link>
     <link rel="stylesheet" type="text/css" href="themes/icon.css"></link>
@@ -15,22 +15,19 @@
             $('#masterCardPurchaseDetailsDg').datagrid({
                 columns:[[
                     {field:'id',title:'ID',width:50,checkbox:true},
-                    {field:'openCardCompanyName',title:'开卡公司',width:50},
+                    {field:'openBillCompany',title:'开卡单位',width:50},
                     {field:'masterCardNum',title:'主卡卡号',width:50},
-                    {field:'transferTime',title:'转账时间',width:50},
-                    {field:'accountingTime',title:'上账时间',width:50},
-                    {field:'rechargeAmount',title:'充值面额',width:50},
-                    {field:'transferAmount',title:'转账金额',width:50},
-                    {field:'discount',title:'折扣',width:50, formatter: function(value,row,index){return value+"%"}},
-                    {field:'points',title:'积分',width:50},
-                    {field:'remarks',title:'备注',width:50},
+                    {field:'openBillTime',title:'开票时间',width:50},
+                    {field:'openBillAmount',title:'开票金额',width:50},
+                    {field:'taxPoint',title:'税点',width:50},
+                    {field:'returnFundTime',title:'回款时间',width:50},
                     {field:'operation',title:'操作',width:50,align:'center',formatter:function (value, row, index) {
                             var operation = "<a onclick='Edit(" + row.id + ")'>修改</a> | <a onclick='Delete(" + row.id + ")'>删除</a>";
                             return operation;
                         }
                     }
                 ]],
-                url:'/masterCardPurchaseDetails/page',
+                url:'/masterCardOpenBillDetails/page',
                 method:'post',
                 contentType:"application/json;charset=utf-8",
                 toolbar:"#toolbar",
@@ -40,7 +37,7 @@
                 singleSelect:true,
                 pageSize:20,
                 queryParams: {
-                    openCardCompanyName: '',
+                    openBillCompany: '',
                     masterCardNum:''
                 }
 
@@ -56,7 +53,7 @@
             $.ajax({
                 type:"GET",
                 //请求路径
-                url:"/masterCardPurchaseDetails/find",
+                url:"/masterCardOpenBillDetails/find",
                 //或false 是否异步
                 async:true,
                 data:{"id":id},
@@ -67,15 +64,12 @@
                 success:function(data,textStatus,jqXHR){
                     $('#EditForm').form('load',{
                         id:data.id,
-                        openCardCompanyName:data.openCardCompanyName,
+                        openBillCompany:data.openBillCompany,
                         masterCardNum:data.masterCardNum,
-                        transferTime:data.transferTime,
-                        accountingTime:data.accountingTime,
-                        rechargeAmount:data.rechargeAmount,
-                        transferAmount:data.transferTime,
-                        discount:data.discount,
-                        points:data.points,
-                        remarks:data.remarks
+                        openBillTime:data.openBillTime,
+                        openBillAmount:data.openBillAmount,
+                        taxPoint:data.taxPoint,
+                        returnFundTime:data.returnFundTime
                     });
 
 
@@ -91,7 +85,7 @@
             $.ajax({
                 type:"GET",
                 //请求路径
-                url:"/masterCardPurchaseDetails/delete",
+                url:"/masterCardOpenBillDetails/delete",
                 //或false 是否异步
                 async:true,
                 data:{"id":id},
@@ -110,16 +104,16 @@
         }
 
         function Search() {
-            var openCardCompanyName = $('#masterCardPurchaseDetailsSearchOpenCardCompanyName').textbox('getValue');
+            var openBillCompany = $('#masterCardPurchaseDetailsSearchOpenBillCompany').textbox('getValue');
             var masterCardNum = $('#masterCardPurchaseDetailsSearchMasterCardNum').textbox('getValue');
             var queryParams = $('#masterCardPurchaseDetailsDg').datagrid('options').queryParams;
-            queryParams.openCardCompanyName = openCardCompanyName;
+            queryParams.openBillCompany = openBillCompany;
             queryParams.masterCardNum = masterCardNum;
             $('#masterCardPurchaseDetailsDg').datagrid('reload');
         }
         
         function Clear() {
-            $("#masterCardPurchaseDetailsSearchOpenCardCompanyName").textbox('setValue', '');
+            $("#masterCardPurchaseDetailsSearchOpenBillCompany").textbox('setValue', '');
             $("#masterCardPurchaseDetailsSearchMasterCardNum").textbox('setValue', '');
         }
 
@@ -131,7 +125,7 @@
             // 显示进度条
             $.messager.progress();
             $('#AddForm').form('submit', {
-                url: '/masterCardPurchaseDetails/save',
+                url: '/masterCardOpenBillDetails/save',
                 onSubmit: function(){
                     var isValid = $(this).form('validate');
                     if (!isValid){
@@ -158,7 +152,7 @@
             // 显示进度条
             $.messager.progress();
             $('#EditForm').form('submit', {
-                url: '/masterCardPurchaseDetails/update',
+                url: '/masterCardOpenBillDetails/update',
                 onSubmit: function(){
                     var isValid = $(this).form('validate');
                     if (!isValid){
@@ -198,20 +192,17 @@
         <thead>
         <tr>
             <th field="id" width="50" checkbox="true">ID</th>
-            <th field="openCardCompanyName" width="50">开卡公司</th>
+            <th field="openBillCompany" width="50">开卡单位</th>
             <th field="masterCardNum" width="50">主卡卡号</th>
-            <th field="transferTime" width="50">转账时间</th>
-            <th field="accountingTime" width="50">上账时间</th>
-            <th field="rechargeAmount" width="50">充值面额</th>
-            <th field="transferAmount" width="50">转账金额</th>
-            <th field="discount" width="50">折扣</th>
-            <th field="points" width="50">积分</th>
-            <th field="remarks" width="50">备注</th>
+            <th field="openBillTime" width="50">开票时间</th>
+            <th field="openBillAmount" width="50">开票金额</th>
+            <th field="taxPoint" width="50">税点</th>
+            <th field="returnFundTime" width="50">回款时间</th>
             <th field="operation" width="50">操作</th>
         </tr>
         </thead>
        <div id="masterCardPurchaseDetailsTb">
-           <input id="masterCardPurchaseDetailsSearchOpenCardCompanyName" type="text" class="easyui-textbox"  data-options="prompt:'请输入开卡公司..',iconCls:'icon-tip'"></input>
+           <input id="masterCardPurchaseDetailsSearchOpenBillCompany" type="text" class="easyui-textbox"  data-options="prompt:'请输入开卡公司..',iconCls:'icon-tip'"></input>
            |
            <input id="masterCardPurchaseDetailsSearchMasterCardNum" type="text" class="easyui-textbox" data-options="prompt:'请输入主卡卡号..',iconCls:'icon-tip'"></input>
            <button class="easyui-linkbutton"  onclick="Search()" data-options="iconCls:'icon-search'">搜索</button>
@@ -221,13 +212,13 @@
     </table>
 
 
-    <div id="AddWin" class="easyui-window" title="新增主卡进货明细" style="width: 50%; height: auto" data-options="closed:false,collapsible:false,minimizable:false,maximizable:false">
+    <div id="AddWin" class="easyui-window" title="新增主卡开票明细" style="width: 50%; height: auto" data-options="closed:false,collapsible:false,minimizable:false,maximizable:false">
             <form id="AddForm" method="post">
                 <table>
                     <tr>
-                        <td>开卡公司:</td>
+                        <td>开卡单位:</td>
                         <td>
-                            <input class="easyui-textbox" type="text" name="openCardCompanyName" data-options="required:true"/>
+                            <input class="easyui-textbox" type="text" name="openBillCompany" data-options="required:true"/>
                         </td>
                         <td>主卡卡号:</td>
                         <td>
@@ -235,39 +226,23 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>转账时间:</td>
+                        <td>开票时间:</td>
                         <td>
-                            <input class="easyui-datetimebox" name="transferTime" data-options="required:true"/>
+                            <input class="easyui-datetimebox" name="openBillTime" data-options="required:true"/>
                         </td>
-                        <td>上账时间:</td>
+                        <td>开票金额:</td>
                         <td>
-                            <input class="easyui-datetimebox" name="accountingTime" data-options="required:true"/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>充值面额:</td>
-                        <td>
-                            <input class="easyui-numberbox" name="rechargeAmount" data-options="required:true,min:0,precision:2"/>
-                        </td>
-                        <td>转账金额:</td>
-                        <td>
-                            <input class="easyui-numberbox" name="transferAmount" data-options="required:true,min:0,precision:2"/>
+                            <input class="easyui-numberbox" name="openBillAmount" data-options="required:true,min:0,precision:2"/>
                         </td>
                     </tr>
                     <tr>
-                        <td>折扣:</td>
+                        <td>税点:</td>
                         <td>
-                            <input class="easyui-numberbox" name="discount" data-options="required:true,max:100"/>
+                            <input class="easyui-numberbox" name="taxPoint" data-options="required:true,min:0"/>
                         </td>
-                        <td>积分:</td>
+                        <td>回款时间:</td>
                         <td>
-                            <input class="easyui-numberbox" name="points"/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>备注:</td>
-                        <td>
-                            <textarea class="easyui-textbox" name="remarks" ></textarea>
+                            <input class="easyui-datetimebox" name="returnFundTime" data-options="required:true"/>
                         </td>
                     </tr>
                 </table>
@@ -282,14 +257,14 @@
 
 
 
-    <div id="EditWin" class="easyui-window" title="编辑主卡进货明细" style="width: 50%; height: auto" data-options="closed:false,collapsible:false,minimizable:false,maximizable:false">
+    <div id="EditWin" class="easyui-window" title="编辑主卡开票明细" style="width: 50%; height: auto" data-options="closed:false,collapsible:false,minimizable:false,maximizable:false">
         <form id="EditForm" method="post">
             <input type="hidden" name="id" data-options="required:true"/>
             <table>
                 <tr>
-                    <td>开卡公司:</td>
+                    <td>开卡单位:</td>
                     <td>
-                        <input class="easyui-textbox" type="text" name="openCardCompanyName" data-options="required:true"/>
+                        <input class="easyui-textbox" type="text" name="openBillCompany" data-options="required:true"/>
                     </td>
                     <td>主卡卡号:</td>
                     <td>
@@ -297,39 +272,23 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>转账时间:</td>
+                    <td>开票时间:</td>
                     <td>
-                        <input class="easyui-datetimebox" name="transferTime" data-options="required:true"/>
+                        <input class="easyui-datetimebox" name="openBillTime" data-options="required:true"/>
                     </td>
-                    <td>上账时间:</td>
+                    <td>开票金额:</td>
                     <td>
-                        <input class="easyui-datetimebox" name="accountingTime" data-options="required:true"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td>充值面额:</td>
-                    <td>
-                        <input class="easyui-numberbox" name="rechargeAmount" data-options="required:true,min:0,precision:2"/>
-                    </td>
-                    <td>转账金额:</td>
-                    <td>
-                        <input class="easyui-numberbox" name="transferAmount" data-options="required:true,min:0,precision:2"/>
+                        <input class="easyui-numberbox" name="openBillAmount" data-options="required:true,min:0,precision:2"/>
                     </td>
                 </tr>
                 <tr>
-                    <td>折扣:</td>
+                    <td>税点:</td>
                     <td>
-                        <input class="easyui-numberbox" name="discount" data-options="required:true,max:100"/>
+                        <input class="easyui-numberbox" name="taxPoint" data-options="required:true,min:0"/>
                     </td>
-                    <td>积分:</td>
+                    <td>回款时间:</td>
                     <td>
-                        <input class="easyui-numberbox" name="points"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td>备注:</td>
-                    <td>
-                        <textarea class="easyui-textbox" name="remarks" ></textarea>
+                        <input class="easyui-datetimebox" name="returnFundTime" data-options="required:true"/>
                     </td>
                 </tr>
             </table>
