--- a/src/main/resources/static/masterCardPurchaseDetails.html
+++ b/src/main/resources/static/masterCardPurchaseDetails.html
@@ -87,26 +87,30 @@
         }
 
         function Delete(id) {
-            //请求方式   get查询  post增加  put修改   delete删除
-            $.ajax({
-                type:"GET",
-                //请求路径
-                url:"/masterCardPurchaseDetails/delete",
-                //或false 是否异步
-                async:true,
-                data:{"id":id},
-                //超时时间
-                timeout:5000,
-                //返回的数据格式：json/xml/html/script/jsonp/text
-                dataType:'text',
-                success:function(data,textStatus,jqXHR){
-                    $.messager.alert('提示','删除成功','info');
-                    $('#masterCardPurchaseDetailsDg').datagrid('reload');
-                },
-                error:function(error){
-                    $.messager.alert('提示','删除失败','info');
+            $.messager.confirm('确认','您确认想要删除记录吗？',function(b){
+                if (b){
+                    //请求方式   get查询  post增加  put修改   delete删除
+                    $.ajax({
+                        type:"GET",
+                        //请求路径
+                        url:"/masterCardPurchaseDetails/delete",
+                        //或false 是否异步
+                        async:true,
+                        data:{"id":id},
+                        //超时时间
+                        timeout:5000,
+                        //返回的数据格式：json/xml/html/script/jsonp/text
+                        dataType:'text',
+                        success:function(data,textStatus,jqXHR){
+                            $.messager.alert('提示','删除成功','info');
+                            $('#masterCardPurchaseDetailsDg').datagrid('reload');
+                        },
+                        error:function(error){
+                            $.messager.alert('提示','删除失败','info');
+                        }
+                    })
                 }
-            })
+            });
         }
 
         function Search() {
