--- a/src/main/resources/static/masterCardOpenBillDetails.html
+++ b/src/main/resources/static/masterCardOpenBillDetails.html
@@ -232,7 +232,7 @@
                     <tr>
                         <td>开票时间:</td>
                         <td>
-                            <input class="easyui-datetimebox" name="openBillTime" data-options="required:true"/>
+                            <input class="easyui-datetimebox" name="openBillTime" data-options="required:true,editable:false"/>
                         </td>
                         <td>开票金额:</td>
                         <td>
@@ -246,7 +246,7 @@
                         </td>
                         <td>回款时间:</td>
                         <td>
-                            <input class="easyui-datetimebox" name="returnFundTime" data-options="required:true"/>
+                            <input class="easyui-datetimebox" name="returnFundTime" data-options="required:true,editable:false"/>
                         </td>
                     </tr>
                 </table>
@@ -278,7 +278,7 @@
                 <tr>
                     <td>开票时间:</td>
                     <td>
-                        <input class="easyui-datetimebox" name="openBillTime" data-options="required:true"/>
+                        <input class="easyui-datetimebox" name="openBillTime" data-options="required:true,editable:false"/>
                     </td>
                     <td>开票金额:</td>
                     <td>
@@ -292,7 +292,7 @@
                     </td>
                     <td>回款时间:</td>
                     <td>
-                        <input class="easyui-datetimebox" name="returnFundTime" data-options="required:true"/>
+                        <input class="easyui-datetimebox" name="returnFundTime" data-options="required:true,editable:false"/>
                     </td>
                 </tr>
             </table>
