--- a/src/main/resources/static/capitalFlow.html
+++ b/src/main/resources/static/capitalFlow.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>主卡进货明细</title>
+    <title>资金流水</title>
 
     <link rel="stylesheet" type="text/css" href="themes/bootstrap/easyui.css"></link>
     <link rel="stylesheet" type="text/css" href="themes/icon.css"></link>
@@ -12,17 +12,15 @@
     <script type="text/javascript" src="locale/easyui-lang-zh_CN.js"></script>
     <script>
         $(function(){
-            $('#masterCardPurchaseDetailsDg').datagrid({
+            $('#capitalFlowDg').datagrid({
                 columns:[[
                     {field:'id',title:'ID',width:50,checkbox:true},
-                    {field:'openCardCompanyName',title:'开卡公司',width:50},
-                    {field:'masterCardNum',title:'主卡卡号',width:50},
-                    {field:'transferTime',title:'转账时间',width:50},
-                    {field:'accountingTime',title:'上账时间',width:50},
-                    {field:'rechargeAmount',title:'充值面额',width:50},
-                    {field:'transferAmount',title:'转账金额',width:50},
-                    {field:'discount',title:'折扣',width:50, formatter: function(value,row,index){return value+"%"}},
-                    {field:'points',title:'积分',width:50},
+                    {field:'income',title:'收入',width:50},
+                    {field:'expenditure',title:'支出',width:50},
+                    {field:'surplusAmount',title:'余额',width:50},
+                    {field:'payee',title:'收款方',width:50},
+                    {field:'payer',title:'付款方',width:50},
+                    {field:'useTo',title:'用途',width:50},
                     {field:'remarks',title:'备注',width:50},
                     {field:'operation',title:'操作',width:50,align:'center',formatter:function (value, row, index) {
                             var operation = "<a onclick='Edit(" + row.id + ")'>修改</a> | <a onclick='Delete(" + row.id + ")'>删除</a>";
@@ -30,7 +28,7 @@
                         }
                     }
                 ]],
-                url:'/masterCardPurchaseDetails/page',
+                url:'/capitalFlow/page',
                 method:'post',
                 contentType:"application/json;charset=utf-8",
                 toolbar:"#toolbar",
@@ -40,8 +38,8 @@
                 singleSelect:true,
                 pageSize:20,
                 queryParams: {
-                    openCardCompanyName: '',
-                    masterCardNum:''
+                    payee: '',
+                    payer:''
                 }
 
             });
@@ -56,7 +54,7 @@
             $.ajax({
                 type:"GET",
                 //请求路径
-                url:"/masterCardPurchaseDetails/find",
+                url:"/capitalFlow/find",
                 //或false 是否异步
                 async:true,
                 data:{"id":id},
@@ -67,14 +65,12 @@
                 success:function(data,textStatus,jqXHR){
                     $('#EditForm').form('load',{
                         id:data.id,
-                        openCardCompanyName:data.openCardCompanyName,
-                        masterCardNum:data.masterCardNum,
-                        transferTime:data.transferTime,
-                        accountingTime:data.accountingTime,
-                        rechargeAmount:data.rechargeAmount,
-                        transferAmount:data.transferTime,
-                        discount:data.discount,
-                        points:data.points,
+                        income:data.income,
+                        expenditure:data.expenditure,
+                        surplusAmount:data.surplusAmount,
+                        payee:data.payee,
+                        payer:data.payer,
+                        useTo:data.useTo,
                         remarks:data.remarks
                     });
 
@@ -93,7 +89,7 @@
                     $.ajax({
                         type:"GET",
                         //请求路径
-                        url:"/masterCardPurchaseDetails/delete",
+                        url:"/capitalFlow/delete",
                         //或false 是否异步
                         async:true,
                         data:{"id":id},
@@ -103,7 +99,7 @@
                         dataType:'text',
                         success:function(data,textStatus,jqXHR){
                             $.messager.alert('提示','删除成功','info');
-                            $('#masterCardPurchaseDetailsDg').datagrid('reload');
+                            $('#capitalFlowDg').datagrid('reload');
                         },
                         error:function(error){
                             $.messager.alert('提示','删除失败','info');
@@ -114,17 +110,17 @@
         }
 
         function Search() {
-            var openCardCompanyName = $('#masterCardPurchaseDetailsSearchOpenCardCompanyName').textbox('getValue');
-            var masterCardNum = $('#masterCardPurchaseDetailsSearchMasterCardNum').textbox('getValue');
-            var queryParams = $('#masterCardPurchaseDetailsDg').datagrid('options').queryParams;
-            queryParams.openCardCompanyName = openCardCompanyName;
-            queryParams.masterCardNum = masterCardNum;
-            $('#masterCardPurchaseDetailsDg').datagrid('reload');
+            var payee = $('#capitalFlowSearchPayee').textbox('getValue');
+            var payer = $('#capitalFlowSearchPayer').textbox('getValue');
+            var queryParams = $('#capitalFlowDg').datagrid('options').queryParams;
+            queryParams.payee = payee;
+            queryParams.payer = payer;
+            $('#capitalFlowDg').datagrid('reload');
         }
         
         function Clear() {
-            $("#masterCardPurchaseDetailsSearchOpenCardCompanyName").textbox('setValue', '');
-            $("#masterCardPurchaseDetailsSearchMasterCardNum").textbox('setValue', '');
+            $("#capitalFlowSearchPayee").textbox('setValue', '');
+            $("#capitalFlowSearchPayer").textbox('setValue', '');
         }
 
         function Save() {
@@ -135,7 +131,7 @@
             // 显示进度条
             $.messager.progress();
             $('#AddForm').form('submit', {
-                url: '/masterCardPurchaseDetails/save',
+                url: '/capitalFlow/save',
                 onSubmit: function(){
                     var isValid = $(this).form('validate');
                     if (!isValid){
@@ -152,7 +148,7 @@
                     $.messager.alert('提示','新增成功','info');
                     $('#AddForm').form('clear')
                     $('#AddWin').window('close');
-                    $('#masterCardPurchaseDetailsDg').datagrid('reload');
+                    $('#capitalFlowDg').datagrid('reload');
                 }
             });
 
@@ -162,7 +158,7 @@
             // 显示进度条
             $.messager.progress();
             $('#EditForm').form('submit', {
-                url: '/masterCardPurchaseDetails/update',
+                url: '/capitalFlow/update',
                 onSubmit: function(){
                     var isValid = $(this).form('validate');
                     if (!isValid){
@@ -179,7 +175,7 @@
                     $.messager.alert('提示','修改成功','info');
                     $('#EditForm').form('clear')
                     $('#EditWin').window('close');
-                    $('#masterCardPurchaseDetailsDg').datagrid('reload');
+                    $('#capitalFlowDg').datagrid('reload');
                 }
             });
 
@@ -198,26 +194,24 @@
 </head>
 <body>
 <div>
-    <table id="masterCardPurchaseDetailsDg">
+    <table id="capitalFlowDg">
         <thead>
         <tr>
             <th field="id" width="50" checkbox="true">ID</th>
-            <th field="openCardCompanyName" width="50">开卡公司</th>
-            <th field="masterCardNum" width="50">主卡卡号</th>
-            <th field="transferTime" width="50">转账时间</th>
-            <th field="accountingTime" width="50">上账时间</th>
-            <th field="rechargeAmount" width="50">充值面额</th>
-            <th field="transferAmount" width="50">转账金额</th>
-            <th field="discount" width="50">折扣</th>
-            <th field="points" width="50">积分</th>
+            <th field="income" width="50">收入</th>
+            <th field="expenditure" width="50">支出</th>
+            <th field="surplusAmount" width="50">余额</th>
+            <th field="payee" width="50">收款方</th>
+            <th field="payer" width="50">付款方</th>
+            <th field="useTo" width="50">用途</th>
             <th field="remarks" width="50">备注</th>
             <th field="operation" width="50">操作</th>
         </tr>
         </thead>
-       <div id="masterCardPurchaseDetailsTb">
-           <input id="masterCardPurchaseDetailsSearchOpenCardCompanyName" type="text" class="easyui-textbox"  data-options="prompt:'请输入开卡公司..',iconCls:'icon-tip'"></input>
+       <div id="capitalFlowTb">
+           <input id="capitalFlowSearchPayee" type="text" class="easyui-textbox"  data-options="prompt:'请输入收款方..',iconCls:'icon-tip'"></input>
            |
-           <input id="masterCardPurchaseDetailsSearchMasterCardNum" type="text" class="easyui-textbox" data-options="prompt:'请输入主卡卡号..',iconCls:'icon-tip'"></input>
+           <input id="capitalFlowSearchPayer" type="text" class="easyui-textbox" data-options="prompt:'请输入付款方..',iconCls:'icon-tip'"></input>
            <button class="easyui-linkbutton"  onclick="Search()" data-options="iconCls:'icon-search'">搜索</button>
            <button class="easyui-linkbutton"  onclick="Clear()" data-options="iconCls:'icon-clear'">重置</button>
            <button class="easyui-linkbutton" onclick="Save()" data-options="iconCls:'icon-edit'">新增</button>
@@ -225,47 +219,37 @@
     </table>
 
 
-    <div id="AddWin" class="easyui-window" title="新增主卡进货明细" style="width: 50%; height: auto" data-options="closed:false,collapsible:false,minimizable:false,maximizable:false">
+    <div id="AddWin" class="easyui-window" title="新增资金流水" style="width: 50%; height: auto" data-options="closed:false,collapsible:false,minimizable:false,maximizable:false">
             <form id="AddForm" method="post">
                 <table>
                     <tr>
-                        <td>开卡公司:</td>
+                        <td>收入:</td>
                         <td>
-                            <input class="easyui-textbox" type="text" name="openCardCompanyName" data-options="required:true"/>
+                            <input class="easyui-numberbox" type="text" name="income" data-options="required:true,min:0,precision:2"/>
                         </td>
-                        <td>主卡卡号:</td>
+                        <td>支出:</td>
                         <td>
-                            <input class="easyui-textbox" name="masterCardNum" data-options="required:true"/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>转账时间:</td>
-                        <td>
-                            <input class="easyui-datetimebox" name="transferTime" data-options="required:true"/>
-                        </td>
-                        <td>上账时间:</td>
-                        <td>
-                            <input class="easyui-datetimebox" name="accountingTime" data-options="required:true"/>
+                            <input class="easyui-numberbox" name="expenditure" data-options="required:true,min:0,precision:2"/>
                         </td>
                     </tr>
                     <tr>
-                        <td>充值面额:</td>
+                        <td>余额:</td>
                         <td>
-                            <input class="easyui-numberbox" name="rechargeAmount" data-options="required:true,min:0,precision:2"/>
+                            <input class="easyui-numberbox" name="surplusAmount" data-options="required:true,min:0,precision:2"/>
                         </td>
-                        <td>转账金额:</td>
+                        <td>收款方:</td>
                         <td>
-                            <input class="easyui-numberbox" name="transferAmount" data-options="required:true,min:0,precision:2"/>
+                            <input class="easyui-textbox" name="payee" data-options="required:true"/>
                         </td>
                     </tr>
                     <tr>
-                        <td>折扣:</td>
+                        <td>付款方:</td>
                         <td>
-                            <input class="easyui-numberbox" name="discount" data-options="required:true,max:100"/>
+                            <input class="easyui-textbox" name="payer" data-options="required:true"/>
                         </td>
-                        <td>积分:</td>
+                        <td>用途:</td>
                         <td>
-                            <input class="easyui-numberbox" name="points"/>
+                            <input class="easyui-textbox" name="useTo" data-options="required:true"/>
                         </td>
                     </tr>
                     <tr>
@@ -286,48 +270,38 @@
 
 
 
-    <div id="EditWin" class="easyui-window" title="编辑主卡进货明细" style="width: 50%; height: auto" data-options="closed:false,collapsible:false,minimizable:false,maximizable:false">
+    <div id="EditWin" class="easyui-window" title="编辑资金流水" style="width: 50%; height: auto" data-options="closed:false,collapsible:false,minimizable:false,maximizable:false">
         <form id="EditForm" method="post">
             <input type="hidden" name="id" data-options="required:true"/>
             <table>
                 <tr>
-                    <td>开卡公司:</td>
+                    <td>收入:</td>
                     <td>
-                        <input class="easyui-textbox" type="text" name="openCardCompanyName" data-options="required:true"/>
+                        <input class="easyui-numberbox" type="text" name="income" data-options="required:true,min:0,precision:2"/>
                     </td>
-                    <td>主卡卡号:</td>
+                    <td>支出:</td>
                     <td>
-                        <input class="easyui-textbox" name="masterCardNum" data-options="required:true"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td>转账时间:</td>
-                    <td>
-                        <input class="easyui-datetimebox" name="transferTime" data-options="required:true"/>
-                    </td>
-                    <td>上账时间:</td>
-                    <td>
-                        <input class="easyui-datetimebox" name="accountingTime" data-options="required:true"/>
+                        <input class="easyui-numberbox" name="expenditure" data-options="required:true,min:0,precision:2"/>
                     </td>
                 </tr>
                 <tr>
-                    <td>充值面额:</td>
+                    <td>余额:</td>
                     <td>
-                        <input class="easyui-numberbox" name="rechargeAmount" data-options="required:true,min:0,precision:2"/>
+                        <input class="easyui-numberbox" name="surplusAmount" data-options="required:true,min:0,precision:2"/>
                     </td>
-                    <td>转账金额:</td>
+                    <td>收款方:</td>
                     <td>
-                        <input class="easyui-numberbox" name="transferAmount" data-options="required:true,min:0,precision:2"/>
+                        <input class="easyui-textbox" name="payee" data-options="required:true"/>
                     </td>
                 </tr>
                 <tr>
-                    <td>折扣:</td>
+                    <td>付款方:</td>
                     <td>
-                        <input class="easyui-numberbox" name="discount" data-options="required:true,max:100"/>
+                        <input class="easyui-textbox" name="payer" data-options="required:true"/>
                     </td>
-                    <td>积分:</td>
+                    <td>用途:</td>
                     <td>
-                        <input class="easyui-numberbox" name="points"/>
+                        <input class="easyui-textbox" name="useTo" data-options="required:true"/>
                     </td>
                 </tr>
                 <tr>
