--- a/src/main/resources/static/static/attacherCardOfficialAccountSaleDetails.html
+++ b/src/main/resources/static/static/attacherCardOfficialAccountSaleDetails.html
@@ -286,7 +286,7 @@
                         </td>
                         <td>生成时间:</td>
                         <td>
-                            <input class="easyui-datetimebox" name="generationTime" data-options="required:true"/>
+                            <input class="easyui-datetimebox" name="generationTime" data-options="required:true,editable:false"/>
                         </td>
                     </tr>
                     <tr>
@@ -358,7 +358,7 @@
                     </td>
                     <td>生成时间:</td>
                     <td>
-                        <input class="easyui-datetimebox" name="generationTime" data-options="required:true">
+                        <input class="easyui-datetimebox" name="generationTime" data-options="required:true,editable:false">
                     </td>
                 </tr>
                 <tr>
