--- a/src/main/resources/static/static/attacherCardSaleDetails.html
+++ b/src/main/resources/static/static/attacherCardSaleDetails.html
@@ -242,7 +242,7 @@
                         </td>
                         <td>交易时间:</td>
                         <td>
-                            <input class="easyui-datetimebox" name="transactionTime" data-options="required:true"/>
+                            <input class="easyui-datetimebox" name="transactionTime" data-options="required:true,editable:false"/>
                         </td>
                     </tr>
                     <tr>
@@ -294,7 +294,7 @@
                     </td>
                     <td>交易时间:</td>
                     <td>
-                        <input class="easyui-datetimebox" name="transactionTime" data-options="required:true"/>
+                        <input class="easyui-datetimebox" name="transactionTime" data-options="required:true,editable:false"/>
                     </td>
                 </tr>
                 <tr>
