--- a/src/main/resources/static/static/masterCardPurchaseDetails.html
+++ b/src/main/resources/static/static/masterCardPurchaseDetails.html
@@ -241,11 +241,11 @@
                     <tr>
                         <td>转账时间:</td>
                         <td>
-                            <input class="easyui-datetimebox" name="transferTime" data-options="required:true"/>
+                            <input class="easyui-datetimebox" name="transferTime" data-options="required:true,editable:false"/>
                         </td>
                         <td>上账时间:</td>
                         <td>
-                            <input class="easyui-datetimebox" name="accountingTime" data-options="required:true"/>
+                            <input class="easyui-datetimebox" name="accountingTime" data-options="required:true,editable:false"/>
                         </td>
                     </tr>
                     <tr>
@@ -303,11 +303,11 @@
                 <tr>
                     <td>转账时间:</td>
                     <td>
-                        <input class="easyui-datetimebox" name="transferTime" data-options="required:true"/>
+                        <input class="easyui-datetimebox" name="transferTime" data-options="required:true,editable:false"/>
                     </td>
                     <td>上账时间:</td>
                     <td>
-                        <input class="easyui-datetimebox" name="accountingTime" data-options="required:true"/>
+                        <input class="easyui-datetimebox" name="accountingTime" data-options="required:true,editable:false"/>
                     </td>
                 </tr>
                 <tr>
