石化-公众号 比对展示效果

--- a/src/main/resources/static/static/attacherCardSaleDetails.html
+++ b/src/main/resources/static/static/attacherCardSaleDetails.html
@@ -129,6 +129,10 @@
             alert('导入excel');
         }
 
+        function Contrast() {
+            alert('比对');
+        }
+
         function addSubmit() {
             // 显示进度条
             $.messager.progress();
@@ -218,6 +222,7 @@
            <button class="easyui-linkbutton"  onclick="Clear()" data-options="iconCls:'icon-clear'">重置</button>
            <button class="easyui-linkbutton" onclick="Save()" data-options="iconCls:'icon-edit'">新增</button>
            <button class="easyui-linkbutton" onclick="Import()" data-options="iconCls:'icon-filter'">导入</button>
+           <button class="easyui-linkbutton" onclick="Contrast()" data-options="iconCls:'icon-man'">比对</button>
         </div>
     </table>
 
