比对石化和公众号  目前还差购卡人和折扣需要抓取 来源不明

--- a/src/main/resources/static/attacherCardSaleDetails.html
+++ b/src/main/resources/static/attacherCardSaleDetails.html
@@ -129,6 +129,26 @@
             alert('导入excel');
         }
 
+        function Contrast() {
+            $.ajax({
+                type:"GET",
+                //请求路径
+                url:"/attacherCardSaleComparisonDetails/comparison",
+                //或false 是否异步
+                async:true,
+                //超时时间
+                timeout:5000,
+                //返回的数据格式：json/xml/html/script/jsonp/text
+                dataType:'text',
+                success:function(data,textStatus,jqXHR){
+                    $.messager.alert('提示',data,'info');
+                },
+                error:function(error){
+                    $.messager.alert('提示','比对失败','info');
+                }
+            })
+        }
+
         function addSubmit() {
             // 显示进度条
             $.messager.progress();
@@ -218,6 +238,7 @@
            <button class="easyui-linkbutton"  onclick="Clear()" data-options="iconCls:'icon-clear'">重置</button>
            <button class="easyui-linkbutton" onclick="Save()" data-options="iconCls:'icon-edit'">新增</button>
            <button class="easyui-linkbutton" onclick="Import()" data-options="iconCls:'icon-filter'">导入</button>
+           <button class="easyui-linkbutton" onclick="Contrast()" data-options="iconCls:'icon-man'">比对</button>
         </div>
     </table>
 
