--- a/src/main/resources/static/static/attacherCardSaleDetails.html
+++ b/src/main/resources/static/static/attacherCardSaleDetails.html
@@ -130,7 +130,23 @@
         }
 
         function Contrast() {
-            alert('比对');
+            $.ajax({
+                type:"GET",
+                //请求路径
+                url:"/attacherCardSaleComparisonDetails/comparison",
+                //或false 是否异步
+                async:true,
+                //超时时间
+                timeout:5000,
+                //返回的数据格式：json/xml/html/script/jsonp/text
+                dataType:'text',
+                success:function(data,textStatus,jqXHR){
+                    $.messager.alert('提示',data,'info');
+                },
+                error:function(error){
+                    $.messager.alert('提示','比对失败','info');
+                }
+            })
         }
 
         function addSubmit() {
